--- a/src/catalog/view/theme/default/template/common/home.twig
+++ b/src/catalog/view/theme/default/template/common/home.twig
@@ -1,13 +1,31 @@
-<html>
+<!DOCTYPE html>
 <head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>OpenPHP</title>
 </head>
 <body>
+
+<header>
+  <div class="container">
+    <div class="row">
+    </div>
+  </div>
+</header>
+
 <div id="common-home" class="container">
   <div class="row">
-    {% set class = 'col-sm-12' %}
-    <div id="content" class="{{ class }}"></div>
-      <b>Hello world!</b>
-    </div>
+    <div id="content">Hello World!</div>
+  </div>
 </div>
+
+<footer>
+  <div class="container">
+    <div class="row">
+    </div>
+  </div>
+</footer>
+
 </body>
 </html>
